plugins {
    id 'java'
    id 'application'
}

group = 'ch.zhaw.pm3'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'io.rest-assured:rest-assured:5.4.0'
    testImplementation 'io.rest-assured:json-path:5.4.0'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.11.0'
    implementation "io.javalin:javalin:6.1.3"
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.23.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.23.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j2-impl', version: '2.23.1'
    implementation "com.fasterxml.jackson.core:jackson-databind:2.14.1"
    implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '6.2.3'
    implementation group: 'io.javalin.community.ssl', name: 'ssl-plugin', version: '6.1.3'
}

application {
    mainClass = 'ch.zhaw.mathify.App'
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
